fixed bug with visibility  arrows and slider under  the header by scroll

--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,7 @@ p {
 }
 
 .header {
+  z-index: 999;
   position: fixed;
   height: 70px;
   background: transparent;
@@ -491,6 +492,9 @@ p {
   background-color: #d5d5d5;
 }
 .work__icon {
+  z-index: 1;
+  position: absolute;
+  right: 10px;
   fill: #fff;
   border: 1px solid #d5d5d5;
   border-radius: 50%;
