--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,7 +8,7 @@
   color: #000;
 }
 .header{
-
+  z-index: 999;
   
   position: fixed;
   height: 70px;
